--- a/deploy/nginx/trendearly.xyz.conf
+++ b/deploy/nginx/trendearly.xyz.conf
@@ -44,20 +44,47 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
+    # Backend API - reverse proxy to FastAPI (MUST come before root location)
+    location /api/ {
+        proxy_pass http://127.0.0.1:8000;
+        proxy_http_version 1.1;
+        
+        # Headers
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $server_name;
+        
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # Buffering
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 4k;
+        
+        # No caching for API endpoints
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
+    }
+
+    # Optional: Paid app frontend (static files)
+    location /app {
+        alias /var/www/trendearly/app;
+        try_files $uri $uri/ $uri.html /app/index.html;
+        
+        # Cache app pages for 5 minutes
+        expires 5m;
+        add_header Cache-Control "public, must-revalidate";
+    }
+
     # Public pages (static HTML from Google Trends data)
     location / {
         try_files $uri $uri/ $uri.html /index.html;
         
         # Cache static HTML pages for 1 hour
-        expires 1h;
-        add_header Cache-Control "public, must-revalidate";
-    }
-
-    # Keyword detail pages
-    location /keywords/ {
-        try_files $uri $uri/ $uri.html /keywords/$1/index.html;
-        
-        # Cache keyword pages for 1 hour
         expires 1h;
         add_header Cache-Control "public, must-revalidate";
     }
