--- a/deploy/nginx/trendearly.xyz.conf
+++ b/deploy/nginx/trendearly.xyz.conf
@@ -96,43 +96,6 @@ server {
         access_log off;
     }
 
-    # Backend API - reverse proxy to FastAPI
-    location /api/ {
-        proxy_pass http://127.0.0.1:8000;
-        proxy_http_version 1.1;
-        
-        # Headers
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $server_name;
-        
-        # Timeouts
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-        
-        # Buffering
-        proxy_buffering on;
-        proxy_buffer_size 4k;
-        proxy_buffers 8 4k;
-        
-        # No caching for API endpoints
-        add_header Cache-Control "no-store, no-cache, must-revalidate";
-    }
-
-    # Optional: Paid app frontend (if exists)
-    # Uncomment and configure if you have a separate frontend for authenticated users
-    # location /app {
-    #     alias /var/www/trendearly/app;
-    #     try_files $uri $uri/ $uri.html /app/index.html;
-    #     
-    #     # Cache app pages for 5 minutes
-    #     expires 5m;
-    #     add_header Cache-Control "public, must-revalidate";
-    # }
-
     # Deny access to hidden files
     location ~ /\. {
         deny all;
@@ -148,25 +111,30 @@ server {
     }
 }
 
-# SSL Configuration (uncomment after running certbot)
+# SSL Configuration (uncomment and configure after running certbot)
 # server {
 #     listen 443 ssl http2;
 #     listen [::]:443 ssl http2;
 #     server_name trendearly.xyz www.trendearly.xyz;
 #
-#     # SSL certificates (managed by certbot)
+#     # SSL certificates (certbot will configure these)
 #     ssl_certificate /etc/letsencrypt/live/trendearly.xyz/fullchain.pem;
 #     ssl_certificate_key /etc/letsencrypt/live/trendearly.xyz/privkey.pem;
-#     include /etc/letsencrypt/options-ssl-nginx.conf;
-#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+#
+#     # SSL configuration
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_ciphers HIGH:!aNULL:!MD5;
+#     ssl_prefer_server_ciphers on;
+#     ssl_session_cache shared:SSL:10m;
+#     ssl_session_timeout 10m;
 #
 #     # Root directory for static public pages
 #     root /var/www/trendearly/public;
 #     index index.html;
 #
 #     # Logging
-#     access_log /var/log/nginx/trendearly_access.log;
-#     error_log /var/log/nginx/trendearly_error.log;
+#     access_log /var/log/nginx/trendearly_ssl_access.log;
+#     error_log /var/log/nginx/trendearly_ssl_error.log;
 #
 #     # Gzip compression
 #     gzip on;
@@ -175,38 +143,13 @@ server {
 #     gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
 #
 #     # Security headers
-#     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 #     add_header X-Frame-Options "SAMEORIGIN" always;
 #     add_header X-Content-Type-Options "nosniff" always;
 #     add_header X-XSS-Protection "1; mode=block" always;
 #     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+#     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 #
-#     # Public pages (static HTML from Google Trends data)
-#     location / {
-#         try_files $uri $uri/ $uri.html /index.html;
-#         
-#         # Cache static HTML pages for 1 hour
-#         expires 1h;
-#         add_header Cache-Control "public, must-revalidate";
-#     }
-#
-#     # Keyword detail pages
-#     location /keywords/ {
-#         try_files $uri $uri/ $uri.html /keywords/$1/index.html;
-#         
-#         # Cache keyword pages for 1 hour
-#         expires 1h;
-#         add_header Cache-Control "public, must-revalidate";
-#     }
-#
-#     # Static assets (CSS, JS, images)
-#     location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
-#         expires 1y;
-#         add_header Cache-Control "public, immutable";
-#         access_log off;
-#     }
-#
-#     # Backend API - reverse proxy to FastAPI
+#     # Backend API - reverse proxy to FastAPI (MUST come before root location)
 #     location /api/ {
 #         proxy_pass http://127.0.0.1:8000;
 #         proxy_http_version 1.1;
@@ -232,13 +175,31 @@ server {
 #         add_header Cache-Control "no-store, no-cache, must-revalidate";
 #     }
 #
-#     # Optional: Paid app frontend (if exists)
-#     # location /app {
-#     #     alias /var/www/trendearly/app;
-#     #     try_files $uri $uri/ $uri.html /app/index.html;
-#     #     expires 5m;
-#     #     add_header Cache-Control "public, must-revalidate";
-#     # }
+#     # Optional: Paid app frontend (static files)
+#     location /app {
+#         alias /var/www/trendearly/app;
+#         try_files $uri $uri/ $uri.html /app/index.html;
+#         
+#         # Cache app pages for 5 minutes
+#         expires 5m;
+#         add_header Cache-Control "public, must-revalidate";
+#     }
+#
+#     # Public pages (static HTML from Google Trends data)
+#     location / {
+#         try_files $uri $uri/ $uri.html /index.html;
+#         
+#         # Cache static HTML pages for 1 hour
+#         expires 1h;
+#         add_header Cache-Control "public, must-revalidate";
+#     }
+#
+#     # Static assets (CSS, JS, images)
+#     location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
+#         expires 1y;
+#         add_header Cache-Control "public, immutable";
+#         access_log off;
+#     }
 #
 #     # Deny access to hidden files
 #     location ~ /\. {
@@ -254,4 +215,3 @@ server {
 #         log_not_found off;
 #     }
 # }
-
