--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf node_modules .next package-lock.json out"
   },
   "dependencies": {
     "next": "14.0.4",
